# nanosvg4cmake

./: .gitignore  .travis.yml  CMakeLists.txt  README4cmake.md
cmake-test/: CMakeLists.txt  build_and_verify.sh  main.c
example/: CMakeLists.txt  rebuild_and_run.sh
src/: nanosvg.c
